# mlp_pgn_chess

./: CMakeLists.txt  README.md  main.cpp
libs/mlp/chess/: CMakeLists.txt  board.cpp  board.hpp  pgn_parser.cpp  pgn_parser.hpp  pgn_playermove.cpp  pgn_playermove.hpp  piece.hpp  square.cpp  square.hpp  utility.hpp
